--- a/fisherman game gorilla/fisherman_game.html
+++ b/fisherman game gorilla/fisherman_game.html
@@ -8,7 +8,9 @@
 	<script src="jsPsych/plugins/jspsych-fishings.js"></script>
 	<script src="jsPsych/plugins/jspsych-call-function.js"></script>
 	<script src="jsPsych/plugins/jspsych-fishing-looping.js"></script>
-	<script src="jsPsych/plugins/jspsych-html-keyboard-response.js"></script>
+	<script src="jsPsych/plugins/jspsych-image-keyboard-response.js"></script>
+	<script src="jsPsych/plugins/jspsych-rod-fixing.js"></script>
+	<script src="jsPsych/plugins/jspsych-audio.js"></script>
     <link rel="stylesheet" href="jsPsych/css/jspsych.css"></link>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css" type="text/css">
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
@@ -16,16 +18,29 @@
     <style>
 	  html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 	  #jspsych-target { width: 100%; height: 100%;}
-	  #srt-score { position: absolute; width: 100%; border-bottom: 1px solid #ddd; background-color: #fafafa; margin:0; text-align: center; display: none;}
-	  #srt-score progress { width: 500px; }
-	  #srt-score .srt-top { padding: 10px 75px; display: inline-block; font-family: 'Open Sans', 'Arial'; font-size: 16px; color: #333;}
+	  #srt-score { background-color: black; margin: 0; text-align: center; display: none; position: absolute; width: 60px; top: 380px; right: 400px;}
+	  #srt-score .srt-top {display: inline-block; font-family: 'Open Sans', 'Arial'; font-size: 16px; color: white;}
+	  #message { background-color: black; margin: 0; text-align: center; display: none; position: absolute; width: 350px; top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);}
+  	  #message .message-top {display: inline-block; font-family: 'Open Sans', 'Arial'; font-size: 16px; color: white;}
+	  #direction {background-color: black; margin: 0; text-align: center; display: none; position: absolute; width: 350px; top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);}
+      #direction .direction-top {display: inline-block; font-family: 'Open Sans', 'Arial'; font-size: 16px; color: white;}
     </style>
   </head>
   <body>
     <div id="srt-score">
        <span class="srt-top">Price: <span id="srt-correct-count">0</span></span>
-       <span class="srt-top">Time: <progress max="100" value="0" id="srt-timer"></progress></span>
      </div>
+     <div id="message">
+        <span class="message-top"> &#165; 3000 worth &#163; 4.0 Max: &#165; 2.5 Min: &#165; 0.1</span>
+      </div>
+      <div id="direction">
+         <span class="direction-top">"Oh no! Your rod has broken!"</span>
+       </div>
+	  
      <div id="jspsych-target"></div>
   </body>
   <script>
@@ -69,7 +84,7 @@
  	      }
  	    }
  	  };
- 	  timeline.push(tap_node);
+ 	  //timeline.push(tap_node);
 	  
 	  var trial_2 = {
 	    type: 'instructions',
@@ -82,78 +97,114 @@
 	  var fishing = {
 	  type: 'fishing-looping',
 	  stimulus: 'img/fish.png',
-	  price: "1.04",
 	  prompt: '<p>Fish!</p>',
 	  choices: [70, 70],
 	  key_answer: 70,
 	  show_stim_with_feedback: true,
-	  fished_feedback: 'img/fisherman_feedback.png',
+	  fished_feedback: 'img/fished.png',
 	  background: 'url(img/background.png)',
 	  background_spec_repeat: 'no-repeat',
-	  background_spec_position: 'center center'
+	  background_spec_position: 'center center',
+		  audio: 'audio/ding.wav'
   }
   
   var price = [1, 2, 3, 4, 5, 6, 7, 8];
-  var show_timer = {
+  var show_price = {
     type: 'call-function',
     func: function(){
-      document.querySelector('#srt-score').style.display = 'block';
+      document.querySelector('#srt-score').style.display = 'inline-block';
     }
   }
-  timeline.push(show_timer);
+  timeline.push(show_price);
+  
+  var show_message = {
+      type: 'call-function',
+      func: function(){
+        document.querySelector('#message').style.display = 'inline-block';
+      }
+  }
+  timeline.push(show_message);
+  
   var p = 0;
   for(var i=0; i<n_blocks; i++){
 
       var timer_start = {
         type: 'call-function',
         func: function(){
-          console.log(price[p])
           document.querySelector('#srt-correct-count').innerHTML = price[p];
 		  p = p + 1;
-          console.log(price[i])
-		    var d = new Date();
-		    block_start_time = d.getTime();
-			timer_ticks = setInterval(function(){
-            var diff = Date.now() - block_start_time;
-            var ratio = diff / block_length * 100;
-            //console.log(Math.floor(ratio));
-            var proportion_time_elapsed = Math.floor(ratio);
-            //console.log(proportion_time_elapsed);
-            document.querySelector('#srt-timer').value = proportion_time_elapsed;
-          }, 100)
+		  var d = new Date();
+		  block_start_time = d.getTime();
         }
       }
-  var loop_node = {
-	  data:{block: i},
-    timeline: [fishing],
-    loop_function: function(data){
-      if(Date.now() - block_start_time < block_length){
-        return true;
-      } else {
-        return false;
+	  
+      var audio = {
+        type: 'call-function',
+        func: function(){
+		  	var audio = "audio/ding.wav";
+		  	var AU = new Audio(audio);
+		  	AU.play();
+        }
+      }
+	  
+  	
+	  
+	  var loop_node = {
+		  data:{block: i},
+		  timeline: [fishing],
+		  loop_function: function(data){
+			  if(Date.now() - block_start_time < block_length){
+				  return true;
+			  } else {
+				  return false;
+			  }
+		  }
+	  };
+  timeline.push(timer_start, audio, loop_node);
+}
+
+	var show_direction = {
+  	  type: 'call-function',
+  	  func: function(){
+    	  document.querySelector('#direction').style.display = 'inline-block';
+  	}
+	}
+	timeline.push(show_direction);
+
+	var n_fix = 6;
+	var s = 0;
+
+    var trial = {
+      type: 'rod-fixing',
+      stimulus: 'img/cross.png',
+      choices: [39, 39],
+	  background: 'url(img/background.png)',
+	  background_spec_repeat: 'no-repeat',
+	  background_spec_position: 'center center',
+  	  on_finish: function(data){
+  		  if (data.key_press == 39){
+  			  console.log("man")
+  			  s = s + 1;
+  			  return s;
+  		  } else {
+  			  n_fix = n_fix + 1;
+  			  return n_fix;
+  		  }
+  	  }
+    };
+    var loop_node = {
+      timeline: [trial],
+      loop_function: function(data){
+  		console.log(s);
+        if(s < n_fix){
+          return true;
+        } else {
+          return false;
+        }
       }
     }
-  };
-  //console.log(i)
-  timeline.push(timer_start, loop_node);
-}
-	  // // load json file
-// 	  var fishprice = (function() {
-// 			var json = null;
-// 			$.ajax({
-// 				'async': false,
-// 				'global': false,
-// 				'url': "condition_stimuli.json",
-// 				'dataType': "json",
-// 				'success': function (data) {
-// 					json = data;
-// 				}
-// 			});
-// 			return json
-//
-// 		})();
-// 		// console.log(fishprice[Object.keys(fishprice)[1]]);
-//
+	timeline.push(loop_node)
+	
 
 	  jsPsych.init({
 	  	display_element: 'jspsych-target',
