--- a/fisherman game gorilla/fisherman_game.html
+++ b/fisherman game gorilla/fisherman_game.html
@@ -115,7 +115,7 @@
       document.querySelector('#srt-score').style.display = 'inline-block';
     }
   }
-  timeline.push(show_price);
+  // timeline.push(show_price);
   
   var show_message = {
       type: 'call-function',
@@ -123,7 +123,7 @@
         document.querySelector('#message').style.display = 'inline-block';
       }
   }
-  timeline.push(show_message);
+ //  timeline.push(show_message);
   
   var p = 0;
   for(var i=0; i<n_blocks; i++){
@@ -160,7 +160,7 @@
 			  }
 		  }
 	  };
-  timeline.push(timer_start, audio, loop_node);
+  // timeline.push(timer_start, audio, loop_node);
 }
 
 	var show_direction = {
@@ -169,7 +169,7 @@
     	  document.querySelector('#direction').style.display = 'inline-block';
   	}
 	}
-	timeline.push(show_direction);
+	// timeline.push(show_direction);
 
 	var n_fix = 6;
 	var s = 0;
